# stripe-webhooks

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  build.rs  service.nomad
.github/_workflows/: deploy-dev.yaml
.github/workflows/: deploy-dev.yaml  deploy-main.yaml
migrations/: V1__subscriptions.sql  V2__subscriptions_add_payment_dates.sql  V3__subscriptions_add_shop_id_and_canceled_at.sql  V4__subscriptions_add_event_timestamp.sql  V5__subscriptions_add_cancel_at.sql
src/: app_settings.rs  credentials.rs  db.rs  error.rs  events.rs  lib.rs  main.rs  media.rs  publisher.rs  routes.rs
src/api/: FILE_DESCRIPTOR_SET  mod.rs  peoplesmarkets.media.v1.rs  peoplesmarkets.pagination.v1.rs  sited_io.media.v1.rs  sited_io.pagination.v1.rs  sited_io.types.v1.rs
src/model/: mod.rs  subscription.rs
