[package]
name = "stripe-webhooks"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = { version = "0.6.4", default-features = false }
actix-web = { version = "4.4.0", default-features = false, features = [
  "macros",
] }
async-stripe = { git = "https://github.com/Maxi-Teme/async-stripe.git", features = [
  "runtime-tokio-hyper",
] }
chrono = { version = "0.4.31", default-features = false, features = ["clock"] }
deadpool-postgres = { version = "0.10.5", default-features = false, features = [
  "rt_tokio_1",
] }
openssl = { version = "0.10.57", features = ["vendored"] }
refinery = { version = "0.8.11", default-features = false, features = [
  "tokio-postgres",
] }
reqwest = { version = "0.11.20", default-features = false }
sea-query = { version = "0.30.1", default-features = false, features = [
  "derive",
  "backend-postgres",
] }
sea-query-postgres = { version = "0.4.0", default-features = false, features = [
  "with-uuid",
  "with-chrono",
] }
serde = { version = "1.0.188", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.107", default-features = false }
tracing = { version = "0.1.37", default-features = false, features = ["log"] }
tracing-subscriber = { version = "0.3.17", default-features = false, features = [
  "tracing-log",
  "fmt",
] }
uuid = { version = "1.4.1", default-features = false, features = ["v4"] }
