[package]
name = "stripe-webhooks"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = { version = "0.7.0", default-features = false }
actix-web = { version = "4.9.0", default-features = false, features = [
  "macros",
] }
async-nats = "0.36.0"
async-stripe = { version = "0.39.1", features = ["runtime-tokio-hyper"] }
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
deadpool-postgres = { version = "0.14.0", default-features = false, features = [
  "rt_tokio_1",
] }
openssl = { version = "0.10.66", features = ["vendored"] }
postgres-openssl = "0.5.0"
prost = { version = "0.13.2" }
refinery = { version = "0.8.14", default-features = false, features = [
  "tokio-postgres",
] }
sea-query = { version = "0.30.7", default-features = false, features = [
  "derive",
  "backend-postgres",
] }
sea-query-postgres = { version = "0.4.0", default-features = false, features = [
  "with-uuid",
  "with-chrono",
] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false }
tracing = { version = "0.1.40", default-features = false, features = ["log"] }
tracing-subscriber = { version = "0.3.18", default-features = false, features = [
  "tracing-log",
  "fmt",
] }
uuid = { version = "1.10.0", default-features = false, features = ["v4"] }

[build-dependencies]
tonic-build = { version = "0.12.2", default-features = false, features = [
  "prost",
  "transport",
] }
